--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.7.0",
+    "firebase": "7.19.1",
     "fuse.js": "6.4.1",
     "normalize.css": "8.0.1",
     "react": "^18.1.0",
